# ilovebandits

./: .readthedocs.yaml  README.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: cd-pipeline.yml  ci-pipeline.yml
docs/source/: conf.py  examples_cban.rst  examples_mab.rst  ilovebandits.rst  intro.rst
src/ilovebandits/: agents.py  handlers.py  utils.py
src/ilovebandits/data_bandits/: utils.py
src/ilovebandits/tests/cbandits/: test_agents.py  test_databandits.py  test_sim.py  test_utils.py
